# AIGuardian

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .tool-versions  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  policy-sandbox-context-qa.txt  product-architecture-qa.txt  product-positioning-and-use-cases.txt  render.yaml
.kiro/specs/guardian-ai/: .config.kiro  adr-001-wasm-runtime.md  adr-002-cpp-language.md  adr-003-cmake-build.md  adr-004-json-library.md  adr-005-testing-framework.md  adr-006-visualization.md  adr-007-policy-formats.md  adr-008-graph-structure.md  collaboration-plan.md  design.md  dev-a-tasks.md  dev-b-tasks.md  dev-c-tasks.md  dev-d-tasks.md  requirements.md  tasks.md
cli/: main.cpp  scenarios.cpp  scenarios.hpp  terminal_ui.cpp  terminal_ui.hpp
demo/: demo.py  requirements.txt
docs/: WINDOWS_SETUP.md  api.md  demo_guide.md  policy_guide.md
examples/: basic_integration.cpp  concurrent_sessions.cpp  custom_policy.cpp  sandbox_config.cpp
frontend/: index.html
gateway/: main.cpp
include/guardian/: config.hpp  guardian.hpp  logger.hpp  policy_graph.hpp  policy_validator.hpp  sandbox_manager.hpp  session_manager.hpp  tool_interceptor.hpp  types.hpp  visualization.hpp
policies/: demo.json  developer.json  dos_prevention.json  financial.json  validate_policies.cpp
scripts/: add-defender-exclusion.bat  setup-hooks.sh  sign-executables.ps1
scripts/hooks/: commit-msg  pre-commit
src/: config.cpp  guardian.cpp  logger.cpp  policy_graph.cpp  policy_validator.cpp  sandbox_manager.cpp  session_manager.cpp  tool_interceptor.cpp  visualization.cpp
tests/fixtures/: demo_policy.json
tests/integration/: test_integration_demos.cpp
tests/performance/: bench_policy_graph.cpp  bench_sandbox.cpp  bench_validator.cpp  bench_visualization.cpp
tests/sandbox/: test_wasmedge.cpp
tests/unit/: test_cli.cpp  test_config.cpp  test_guardian.cpp  test_logger.cpp  test_policy_graph.cpp  test_policy_validator.cpp  test_sandbox_manager.cpp  test_sandbox_types.cpp  test_session_manager.cpp  test_tool_interceptor.cpp  test_visualization.cpp
wasm_tools/: README.md  approval_request.wasm  build.sh  deploy_production.wasm  encrypt.wasm  generate_report.wasm  infinite_loop_tool.wasm  memory_hog.wasm  read_accounts.wasm  read_code.wasm  run_tests.wasm  search_database.wasm  send_email.wasm
wasm_tools/src/: approval_request.cpp  deploy_production.cpp  encrypt.cpp  generate_report.cpp  infinite_loop_tool.cpp  memory_hog.cpp  read_accounts.cpp  read_code.cpp  run_tests.cpp  search_database.cpp  send_email.cpp
